# conan-libjpeg

./: CMakeLists.txt  README.md  build.py  conanfile.py  jconfig.h.cmake
CMake/: CMakeLists.txt
test/: CMakeLists.txt  conanfile.py  test.cpp
